// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`INITIAL_STATE 1`] = `
<Card>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "marginBottom": 20,
        "textAlign": "center",
      }
    }
  >
    Continue with Google+
  </Text>
  <branch(LoginButton)
    loading={false}
    onButtonPress={[Function]}
  />
  <FormValidationMessage />
</Card>
`;

exports[`LOGIN_USER_FAIL 1`] = `
<LoginForm
  error="Authentication failed"
  loading={false}
  loginWithGoogle={[Function]}
/>
`;

exports[`LOGIN_USER_PASS 1`] = `
<LoginForm
  error=""
  loading={false}
  loginWithGoogle={[Function]}
/>
`;

exports[`LOGIN_USER_START 1`] = `
<LoginForm
  error=""
  loading={true}
  loginWithGoogle={[Function]}
/>
`;
